# cc-wrapper

./: .clang-format  .gitignore  .gitmodules  .travis.yml  Makefile  Makefile.am  NOTICE  README.md  autogen.sh  configure  configure.ac
scripts/: generate-bins.sh  install-links.sh
src/: Makefile  arguments.c  arguments.h  arguments_test.cc  arguments_test_util.c  arguments_test_util.h  array.c  array.h  array_test.cc  avl.c  avl.h  avl_test.cc  bins.hpp  config.h  env.cpp  env.hpp  environment.c  environment.h  environment_test.cc  environment_test_util.c  environment_test_util.h  execinfo.c  execinfo.h  execinfo_test.cc  execinfo_test_util.c  execinfo_test_util.h  file.cpp  file.hpp  flags.cpp  flags.hpp  fmt.cpp  fmt_sv.hpp  func.h  gcc.cpp  gcc.hpp  generic.cpp  generic.hpp  graph.hpp  linker.cpp  linker.hpp  (+31 more)
src/gcc/: args.cpp.rl  args.hpp  harden.cpp  harden.hpp  harden_filter.cpp.rl  path.cpp  path.hpp  path_filter.cpp.rl
src/linker/: args.hpp  args_dyld.cpp.rl  args_dynamic.cpp.rl  args_filter_linking.cpp.rl  args_libs.cpp.rl  args_linking.cpp.rl  compiler.hpp  compiler_filter.cpp.rl  harden.cpp  harden.hpp  harden_filter.cpp.rl  path.hpp  path_filter.cpp.rl  script.cpp  script.hpp  script_libs.cpp.rl  state.cpp  state.hpp
test/: file.cpp  flags.cpp  graph.cpp  linker.cpp  main.cpp  mock_exec.hpp  path.cpp  strings.cpp  util.cpp
test/gcc/: args.cpp  harden.cpp  path.cpp
test/linker/: args.cpp  compiler.cpp  harden.cpp  path.cpp  script.cpp  state.cpp
